k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: finalproject-service
  namespace: ivolve

spec:
  selector:
    app: finalproject

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
